--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django-allauth = "*"
 django-crispy-forms = "*"
 django-summernote = "*"
 django-widget-tweaks = "*"
+dj-database-url = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [dev-packages]
 
